avance pantalla vigentes

--- a/risk-pug/mixins/panel.pug
+++ b/risk-pug/mixins/panel.pug
@@ -145,7 +145,7 @@ mixin panel(title, breadcrumbLinks=[])
                       a.link-underline-opacity-0.link-body-emphasis.text-uppercase.link-opacity-50.link-opacity-75-hover(href=link[0])= link[1]
                 li.breadcrumb-item.active(aria-current='page')= title
             span.log-history.ms-auto
-              button#log-history.btn.btn-sm.btn-link.text-decoration-none.link-body-emphasis.text-uppercase.link-opacity-50.link-opacity-75-hover(type='button')
+              button#log-history.btn.btn-sm.btn-link.text-decoration-none.link-body-emphasis.text-uppercase.link-opacity-50.link-opacity-75-hover(type='button' style="margin-top: -2rem;")
                 i.material-symbols-outlined.me-2.align-bottom history
                 | Log
 
