--- a/risk-pug/pages/ingresos-empresa.pug
+++ b/risk-pug/pages/ingresos-empresa.pug
@@ -28,91 +28,7 @@ block content
           button.ms-auto.btn.btn-success.btn-sm.text-nowrap#actualizar-informacion(type='button')
             i.material-symbols-outlined.align-bottom.me-1 autorenew
             span Actualizar Información
-          .vr.mx-2
-          form.hstack.gap-2.align-items-end#filter-table
-            fieldset.ejercicio-field
-              label.form-label(for='ejercicio') Ejercicio:
-              .input-group.input-group-sm#ejercio-input-gr
-                span.input-group-text.bg-white.border-end-0.material-symbols-outlined.cursor-pointer(data-td-target='#ejercio-input-gr' data-td-toggle='datetimepicker') calendar_month
-                input.form-control.text-end.date#ejercicio(name='ejercicio' type='number' placeholder='_ _ _ _' data-td-target='#ejercio-input-gr' min='2000', required)
-              script.
-
-                document.addEventListener('DOMContentLoaded', function () {
-                  const inputGrEjercicio = document.getElementById('ejercio-input-gr');
-                  const inputEjercicio = document.querySelector('#ejercio-input-gr input');
-                  const today = new Date();
-                  inputEjercicio.setAttribute('max', today.getFullYear());
-                  new tempusDominus.TempusDominus(inputGrEjercicio, {
-                    display: {
-                      components: {
-                        decades: false,
-                        year: true,
-                        month: false,
-                        date: false,
-                        hours: false,
-                        minutes: false,
-                        seconds: false
-                      },
-                      //theme: 'light'
-                    },
-                    localization: {
-                      format: 'yyyy',
-                    },
-                    restrictions: {
-                      minDate: '2000',
-                      maxDate: new Date()
-                    }
-                  });
-                });
-
-            button.btn.btn-primary.btn-sm.px-3.text-nowrap(type='submit')
-              i.material-symbols-outlined.align-bottom filter_alt
-              | Filtrar
-
-            script.
-
-              document.addEventListener('DOMContentLoaded', function () {
-                const form = document.querySelector('#filter-table');
-                form.addEventListener('submit', function (event) {
-                  event.preventDefault();
-
-                  const formData = new FormData(form);
-                  formData.forEach((value, key) => {
-                    console.log(`${key}: ${value}`);
-                  });
-                  const formObject = Object.fromEntries(formData.entries());
-                  console.log(formObject);
-                });
-              });
-
-          fieldset.time-process-component
-            label.form-label Tiempo del Proceso:
-            .input-group.input-group-sm
-              span.input-group-text.bg-white.border-end-0.material-symbols-outlined update
-              input.form-control.text-center#time-process(name='time-process' type='text' placeholder='-------------', readonly, style='box-shadow:none;')
-              button.btn.btn-info.process-info#tiempo-proceso(type='button' data-bs-toggle='dropdown' data-bs-auto-close='outside' aria-expanded='false')
-                span.material-symbols-outlined.align-bottom schedule
-              .dropdown-menu.dropdown-menu-end
-                .container-fluid(style='min-width: 400px; max-width: 100wv;')
-                  h3.text-primary Datos del Proceso
-                  dl.row
-                    dt.text-nowrap.col-sm-4.text-end.text-dark Inicio:
-                    dd.text-nowrap.col-sm-8
-                      span#data-process-inicio 2024 -11-12 21:02:19
-                    dt.text-nowrap.col-sm-4.text-end.text-dark Fin:
-                    dd.text-nowrap.col-sm-8
-                      span#data-process-fin 2024 -11-12 21:02:02
-                    dt.text-nowrap.col-sm-4.text-end.text-dark Tiempo:
-                    dd.text-nowrap.col-sm-8
-                      span#data-process-tiempo 0 horas, 0 minutos, 3 segundos
-                    dt.text-nowrap.col-sm-4.text-end.text-dark Zona Horaria:
-                    dd.text-nowrap.col-sm-8
-                      span#data-process-zona-horaria America/Mexico City
-          .vr.ms-2
-          button.btn.btn-link.link-excel.p-0.btn-lg#hoja-calculo(type='button' style="margin-bottom: -.2rem")
-            i.cpa-file-xls.fs-1
-          button.btn.btn-link.link-pdf.p-0.btn-lg#pdf(type='button' style="margin-bottom: -.2rem")
-            i.cpa-file-pdf.fs-1
+          include ../layouts/table-actions.pug
     .table-element
       .table-responsive.mt-4
         table.table.table-striped.table-hover#table-ingresos-empresa
