--- a/risk-pug/layouts/table-actions.pug
+++ b/risk-pug/layouts/table-actions.pug
@@ -1,3 +1,4 @@
+block startActions
 .vr.mx-2
 form.hstack.gap-2.align-items-end#filter-table
   fieldset.ejercicio-field
@@ -79,7 +80,8 @@ fieldset.time-process-component
           dd.text-nowrap.col-sm-8
             span#data-process-zona-horaria America/Mexico City
 .vr.ms-2
-button.btn.btn-link.link-excel.p-0.btn-lg#hoja-calculo(type='button' style="margin-bottom: -.2rem")
+block endActions
+button.btn.btn-link.link-excel.p-0.btn-lg#hoja-calculo(type='button' style="margin-bottom: -.5rem")
   i.cpa-file-xls.fs-1
-button.btn.btn-link.link-pdf.p-0.btn-lg#pdf(type='button' style="margin-bottom: -.2rem")
+button.btn.btn-link.link-pdf.p-0.btn-lg#pdf(type='button' style="margin-bottom: -.5rem")
   i.cpa-file-pdf.fs-1
