--- a/risk-pug/layouts/page.pug
+++ b/risk-pug/layouts/page.pug
@@ -17,10 +17,12 @@ html(lang='es')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css' rel='stylesheet')
     //  Tempus Dominus Styles 
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/css/tempus-dominus.min.css' crossorigin='anonymous')
+    // Tabulator (local)
+    link(rel='stylesheet' href='/assets/libs/tabulator-master/dist/css/tabulator_bootstrap5.min.css')
     //   CPA CSS  
     link(href='/assets/css/cpa-bs.css' rel='stylesheet')
     link(href='/assets/css/cpa-new.css' rel='stylesheet')
-    link(href='/assets/css/ajustes.css' rel='stylesheet')
+    link(href='/assets/css/cpa-ajustes.css' rel='stylesheet')
     block links
     // -------------
 
@@ -33,6 +35,8 @@ html(lang='es')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz' crossorigin='anonymous')
     //  Tempus Dominus JavaScript 
     script(src='https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.9.4/dist/js/tempus-dominus.min.js' crossorigin='anonymous')
+    //  Tabulator (Local)
+    script(src='/assets/libs/tabulator-master/dist/js/tabulator.min.js' crossorigin='anonymous')
     block scripts
   body.cpa-theme
   
