--- a/risk-pug/layouts/menus.pug
+++ b/risk-pug/layouts/menus.pug
@@ -1,5 +1,5 @@
 append vars
   -
     panelLinks = [
-      ['#', 'attach_money', 'Ingresos'],
+      ['/ingresos-empresa.html', 'attach_money', 'Ingresos'],
     ];
