--- a/risk-pug/pages/ingresos-empresa.pug
+++ b/risk-pug/pages/ingresos-empresa.pug
@@ -529,4 +529,4 @@ block footerPage
   script(src='/assets/js/globals.js')
   script(src='/assets/js/drag-sort.js')
   script(src='/assets/js/cols-selector.js')
-  script(src='/assets/js/ingresos.js')
+  script(src='/assets/js/ingresos-empresa.js')
