--- a/docs/cpa/cpa-icons-v1.0/style.css
+++ b/docs/cpa/cpa-icons-v1.0/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'cpa-icons';
   src:
-    url('fonts/cpa-icons.ttf?gke2h2') format('truetype'),
-    url('fonts/cpa-icons.woff?gke2h2') format('woff'),
-    url('fonts/cpa-icons.svg?gke2h2#cpa-icons') format('svg');
+    url('fonts/cpa-icons.ttf?dbt1oe') format('truetype'),
+    url('fonts/cpa-icons.woff?dbt1oe') format('woff'),
+    url('fonts/cpa-icons.svg?dbt1oe#cpa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cpa-icon-time-details:before {
+  content: "\e902";
+}
 .cpa-icon-ingresos:before {
   content: "\e995";
 }
