--- a/docs/cpa/cpa-icons-v1.0/variables.scss
+++ b/docs/cpa/cpa-icons-v1.0/variables.scss
@@ -1,6 +1,7 @@
 $icomoon-font-family: "cpa-icons" !default;
 $icomoon-font-path: "fonts" !default;
 
+$cpa-icon-time-details: unquote('"\\e902"');
 $cpa-icon-ingresos: unquote('"\\e995"');
 $cpa-icon-deducciones: unquote('"\\e996"');
 $cpa-icon-nomina: unquote('"\\e997"');
