--- a/risk-pug/layouts/page.pug
+++ b/risk-pug/layouts/page.pug
@@ -11,8 +11,8 @@ html(lang='es')
     block metas
 
     // STYLES libraries
-    //  Google Material Symbols  
-    link(href='https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200' rel='stylesheet')
+    //  Google Material Symbols (local)
+    link(href='/assets/libs/material-symbols-0.28.1/material-symbols/index.css' rel='stylesheet')
     //  Font awesome  
     link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css' rel='stylesheet')
     //  Tempus Dominus Styles 
