--- a/risk-pug/pages/ingresos-vigentes.pug
+++ b/risk-pug/pages/ingresos-vigentes.pug
@@ -9,126 +9,110 @@ block content
     breadcrumbLinks = [
       ['#', 'Inicio'],
       ['#', 'Ingresos'],
-      ['./ingresos-empresa.html', 'Resumen por Empresa', 'primary']
+      ['./ingresos-empresa.html', 'Ingresos por Empresa', 'dark']
     ];
 
   +panel("CFDI's Ingresos Vigentes", breadcrumbLinks)
     .table-header 
       .row.align-items-end.gap-2
         .col.col-auto.hstack.gap-2
-          fieldset.corte-visor-sat
-            label.form-label Corte Visor SAT:
-            .input-group.input-group-sm
-              i.input-group-text.bg-white.border-end-0.material-symbols-outlined update
-              input.form-control.text-center#time-sat(name='time-sat' type='text' placeholder='-------------', readonly, style='box-shadow:none;' value="28 Dic 24 0:00 am")
-              button.btn.btn-info#time-sat-action(type='button')
-                i.material-symbols-outlined image
-          fieldset.descarga-cpa
-            label.form-label Descarga CPA:
-            .input-group.input-group-sm
-              i.input-group-text.bg-white.border-end-0.material-symbols-outlined calendar_month
-              input.form-control.text-center#time-cpa(name='time-cpa' type='text' placeholder='-------------', readonly, style='box-shadow:none;' value="28 Dic 24 0:00 am")
+          include ../layouts/table-filters-in-vig.pug
         .ms-auto.table-actions.hstack.align-items-end.gap-2.col-12.col-xl-auto
           include ../layouts/table-actions.pug
     section.content-gral
       .row.g-0.mt-4
-        .col.col-12.col-md-6.col-xxl-5
-          .card.rounded-4
-            .card-header.bg-transparent.border-0.py-3
-              h2.text-center.text-uppercase.mb-0 CFDI's Conciliados
-            .card-body.pt-0
-              #conciliados-anio
-              template#conciliados-mes-ejemplo-vanilla
-                table.table.table-striped.table-hover
-                  thead.text-uppercase.text-center
-                    tr
-                      th.colh-indicator
-                      th.colh-mes periodo
-                      th.colh-facreview facreview
-                      th.colh-risk risk
-                      th.colh-vsat visor sat
-                  tbody
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Enero
-                      td.table-cell.col-facreview 328
-                      td.table-cell.col-risk 146
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Febrero
-                      td.table-cell.col-facreview 335
-                      td.table-cell.col-risk 160
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Marzo
-                      td.table-cell.col-facreview 305
-                      td.table-cell.col-risk 167
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Abril
-                      td.table-cell.col-facreview 297
-                      td.table-cell.col-risk 144
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Mayo
-                      td.table-cell.col-facreview 328
-                      td.table-cell.col-risk 164
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Junio
-                      td.table-cell.col-facreview 367
-                      td.table-cell.col-risk 199
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Julio
-                      td.table-cell.col-facreview 392
-                      td.table-cell.col-risk 195
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Agosto
-                      td.table-cell.col-facreview 310
-                      td.table-cell.col-risk 153
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Septiembre
-                      td.table-cell.col-facreview 303
-                      td.table-cell.col-risk 154
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Octubre
-                      td.table-cell.col-facreview 311
-                      td.table-cell.col-risk 160
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Noviembre
-                      td.table-cell.col-facreview 299
-                      td.table-cell.col-risk 173
-                      td.table-cell.col-vsat ---
-                    tr
-                      td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
-                      td.table-cell.col-mes Diciembre
-                      td.table-cell.col-facreview 473
-                      td.table-cell.col-risk 237
-                      td.table-cell.col-vsat ---
+        .col.col-12.col-md-6.col-xxl-5.bg-white
+          h2.text-primary.text-center.text-uppercase.mb-0.py-2 CFDI's Conciliados
 
-        .col.col-12.col-md-6.col-xxl-7
-          .container-fluid
-            h3.mb-4.text-uppercase Integración de CFDI's Conciliados <span id="mes-seleccionado">Enero</span>
-            #conciliacion-mes.w-100
-            template 
-              .self-align-end
-            h3.my-4.text-uppercase Diferencias
+          #conciliados-anio
+          template#conciliados-mes-ejemplo-vanilla
             table.table.table-striped.table-hover
+              thead.text-uppercase.text-center
+                tr
+                  th.colh-indicator
+                  th.colh-mes periodo
+                  th.colh-facreview facreview
+                  th.colh-risk risk
+                  th.colh-vsat visor sat
+              tbody
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Enero
+                  td.table-cell.col-facreview 328
+                  td.table-cell.col-risk 146
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Febrero
+                  td.table-cell.col-facreview 335
+                  td.table-cell.col-risk 160
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Marzo
+                  td.table-cell.col-facreview 305
+                  td.table-cell.col-risk 167
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Abril
+                  td.table-cell.col-facreview 297
+                  td.table-cell.col-risk 144
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Mayo
+                  td.table-cell.col-facreview 328
+                  td.table-cell.col-risk 164
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Junio
+                  td.table-cell.col-facreview 367
+                  td.table-cell.col-risk 199
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Julio
+                  td.table-cell.col-facreview 392
+                  td.table-cell.col-risk 195
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Agosto
+                  td.table-cell.col-facreview 310
+                  td.table-cell.col-risk 153
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Septiembre
+                  td.table-cell.col-facreview 303
+                  td.table-cell.col-risk 154
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Octubre
+                  td.table-cell.col-facreview 311
+                  td.table-cell.col-risk 160
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Noviembre
+                  td.table-cell.col-facreview 299
+                  td.table-cell.col-risk 173
+                  td.table-cell.col-vsat ---
+                tr
+                  td.table-cell.col-indicator: i.material-symbols-outlined.text-warning error
+                  td.table-cell.col-mes Diciembre
+                  td.table-cell.col-facreview 473
+                  td.table-cell.col-risk 237
+                  td.table-cell.col-vsat ---
+
+
+        .col.col-12.col-md-6.col-xxl-7.border-start.z-1
+          .ps-4
+            h3.text-primary.mb-4.text-uppercase.py-2 Integración de CFDI's Conciliados <span id="mes-seleccionado">Enero</span>
+            #conciliacion-mes.w-100
 append footerPage
   script(src='/assets/js/globals.js')
   script(src='/assets/js/ingresos-vigentes.js')
