reacomodo modal rm table to use tabulator

--- a/risk-pug/layouts/table-actions.pug
+++ b/risk-pug/layouts/table-actions.pug
@@ -10,7 +10,7 @@ fieldset.time-process-component
     .dropdown-menu.dropdown-menu-end
       .container-fluid(style='min-width: 400px; max-width: 100wv;')
         h3.text-primary Datos del Proceso
-        dl.row
+        dl.row.mb-0
           dt.text-nowrap.col-sm-4.text-end.text-dark Inicio:
           dd.text-nowrap.col-sm-8
             span#data-process-inicio 2024 -11-12 21:02:19
