--- a/risk-pug/pages/ingresos-empresa.pug
+++ b/risk-pug/pages/ingresos-empresa.pug
@@ -305,10 +305,10 @@ block content
       .row.mt-2
         .col.col-auto.ms-auto
           .border.rounded.hstack.overflow-hidden
-            .text-uppercase.text-nowrap.p-2.pt-3.bg-white
-              i.material-symbols-outlined.me-2.align-top(style="margin-top:-7px") paid 
+            .text-uppercase.text-nowrap.p-2.bg-white
+              i.material-symbols-outlined.me-2.align-middle(style="margin-top:-3px") paid 
               | Ingresos Acumulables Declaración Anual
-            .text-bg-danger.p-2.pt-3.text-end(style="min-width:100px")
+            .text-bg-primary.p-2.text-end.fs-5(style="min-width:130px; height:37px;")
               | 0.00
 
 block dialogsPage
