--- a/risk-pug/pages/ingresos-vigentes.pug
+++ b/risk-pug/pages/ingresos-vigentes.pug
@@ -22,7 +22,7 @@ block content
     section.content-gral
       .row.g-0.mt-4
         .col.col-12.col-md-6.col-xxl-5.bg-white
-          h2.text-primary.text-center.text-uppercase.mb-0.py-2 CFDI's Conciliados
+          h2.text-primary.text-uppercase.mb-0.py-2 CFDI's Conciliados
 
           #conciliados-anio
           template#conciliados-mes-ejemplo-vanilla
