--- a/risk-pug/pages/ingresos-vigentes.pug
+++ b/risk-pug/pages/ingresos-vigentes.pug
@@ -21,7 +21,7 @@ block content
           include ../layouts/table-actions.pug
     section.content-gral
       .row.g-0.mt-4
-        .col.col-12.col-md-6.col-xxl-5.bg-white
+        .col.col-12.col-md-12.col-xl-6.col-xxl-4.bg-white
           h2.text-primary.text-uppercase.mb-0.py-2 CFDI's Conciliados
 
           #conciliados-anio
@@ -109,7 +109,7 @@ block content
                   td.table-cell.col-vsat ---
 
 
-        .col.col-12.col-md-6.col-xxl-7.border-start.z-1
+        .col.col-12.col-md-12.col-xl-6.col-xxl-8.border-start.z-1
           .ps-4
             h3.text-primary.mb-4.text-uppercase.py-2 Integración de CFDI's Conciliados <span id="mes-seleccionado">Enero</span>
             #conciliacion-mes.w-100
